; ModuleID = '/home/carl/AnghaBench/linux/net/dsa/extr_slave.c_dsa_legacy_fdb_add.c'
source_filename = "/home/carl/AnghaBench/linux/net/dsa/extr_slave.c_dsa_legacy_fdb_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ndmsg = type { i32 }
%struct.nlattr = type { i32 }
%struct.net_device = type { i32 }
%struct.netlink_ext_ack = type { i32 }
%struct.dsa_port = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dsa_legacy_fdb_add(%struct.ndmsg* %0, %struct.nlattr** %1, %struct.net_device* %2, i8* %3, i32 %4, i32 %5, %struct.netlink_ext_ack* %6) #0 {
  %8 = alloca %struct.ndmsg*, align 8
  %9 = alloca %struct.nlattr**, align 8
  %10 = alloca %struct.net_device*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.netlink_ext_ack*, align 8
  %15 = alloca %struct.dsa_port*, align 8
  store %struct.ndmsg* %0, %struct.ndmsg** %8, align 8
  store %struct.nlattr** %1, %struct.nlattr*** %9, align 8
  store %struct.net_device* %2, %struct.net_device** %10, align 8
  store i8* %3, i8** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store %struct.netlink_ext_ack* %6, %struct.netlink_ext_ack** %14, align 8
  %16 = load %struct.net_device*, %struct.net_device** %10, align 8
  %17 = call %struct.dsa_port* @dsa_slave_to_port(%struct.net_device* %16)
  store %struct.dsa_port* %17, %struct.dsa_port** %15, align 8
  %18 = load %struct.dsa_port*, %struct.dsa_port** %15, align 8
  %19 = load i8*, i8** %11, align 8
  %20 = load i32, i32* %12, align 4
  %21 = call i32 @dsa_port_fdb_add(%struct.dsa_port* %18, i8* %19, i32 %20)
  ret i32 %21
}

declare dso_local %struct.dsa_port* @dsa_slave_to_port(%struct.net_device*) #1

declare dso_local i32 @dsa_port_fdb_add(%struct.dsa_port*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
